language-server/src/tests/snapshots/gleam_language_server__tests__rename__rename_type_variant_from_qualified_reference.snap
---
source: language-server/src/tests/rename.rs
expression: "\nimport mod\n\npub fn main() {\n  mod.Constructor\n}\n"
---
----- BEFORE RENAME
-- mod.gleam

pub type Wibble {
  Constructor(Int)
}

fn wibble() {
  Constructor(42)
}


-- app.gleam

import mod

pub fn main() {
  mod.Constructor
      ↑▔▔▔▔▔▔▔▔▔▔
}


----- AFTER RENAME
-- mod.gleam

pub type Wibble {
  Variant(Int)
}

fn wibble() {
  Variant(42)
}


-- app.gleam

import mod

pub fn main() {
  mod.Variant
}
