language-server/src/tests/snapshots/gleam_language_server__tests__rename__rename_type_variant_from_unqualified_reference.snap
---
source: language-server/src/tests/rename.rs
expression: "\nimport mod.{Constructor}\n\npub fn main() {\n  #(Constructor(75), mod.Constructor(57))\n}\n"
---
----- BEFORE RENAME
-- mod.gleam

pub type Wibble {
  Constructor(Int)
}

fn wibble() {
  Constructor(81)
}


-- app.gleam

import mod.{Constructor}

pub fn main() {
  #(Constructor(75), mod.Constructor(57))
    ↑▔▔▔▔▔▔▔▔▔▔                          
}


----- AFTER RENAME
-- mod.gleam

pub type Wibble {
  Constructor(Int)
}

fn wibble() {
  Constructor(81)
}


-- app.gleam

import mod.{Constructor as Number}

pub fn main() {
  #(Number(75), mod.Constructor(57))
}
