language-server/src/tests/snapshots/gleam_language_server__tests__rename__rename_type_variant_pattern_with_arguments.snap
---
source: language-server/src/tests/rename.rs
expression: "\npub type Wibble {\n  Wibble(Int)\n  Wobble(Float)\n}\n\nfn wibble() {\n  case Wibble(10) {\n    Wibble(20) -> todo\n    Wibble(_) -> panic\n  }\n}\n"
---
----- BEFORE RENAME
-- app.gleam

pub type Wibble {
  Wibble(Int)
  Wobble(Float)
}

fn wibble() {
  case Wibble(10) {
       ↑▔▔▔▔▔      
    Wibble(20) -> todo
    Wibble(_) -> panic
  }
}


----- AFTER RENAME
-- app.gleam

pub type Wibble {
  Variant(Int)
  Wobble(Float)
}

fn wibble() {
  case Variant(10) {
    Variant(20) -> todo
    Variant(_) -> panic
  }
}
