language-server/src/tests/snapshots/gleam_language_server__tests__rename__rename_type_with_import_alias_to_original_name.snap
---
source: language-server/src/tests/rename.rs
expression: "\nimport wibble.{type Wibble as Wobble}\n\npub fn main() -> Wobble {\n  todo\n}\n"
---
----- BEFORE RENAME
-- wibble.gleam

pub type Wibble {
  Wibble
}


-- app.gleam

import wibble.{type Wibble as Wobble}

pub fn main() -> Wobble {
                 ↑▔▔▔▔▔  
  todo
}


----- AFTER RENAME
-- wibble.gleam

pub type Wibble {
  Wibble
}


-- app.gleam

import wibble.{type Wibble}

pub fn main() -> Wibble {
  todo
}
