language-server/src/tests/snapshots/gleam_language_server__tests__rename__rename_type_with_same_named_import_alias.snap
---
source: language-server/src/tests/rename.rs
expression: "\npub type Wibble {\n  Wibble\n}\n"
---
----- BEFORE RENAME
-- wibble.gleam

import app.{type Wibble as Wibble}

pub fn go() -> Wibble {
  todo
}


-- app.gleam

pub type Wibble {
         ↑▔▔▔▔▔  
  Wibble
}


----- AFTER RENAME
-- wibble.gleam

import app.{type Wobble as Wibble}

pub fn go() -> Wibble {
  todo
}


-- app.gleam

pub type Wobble {
  Wibble
}
