language-server/src/tests/snapshots/gleam_language_server__tests__rename__rename_value_from_aliased_import_alias_name.snap
---
source: language-server/src/tests/rename.rs
expression: "\nimport mod.{wibble as wobble}\n\npub fn main() {\n  wobble()\n  mod.wibble()\n}\n"
---
----- BEFORE RENAME
-- mod.gleam

pub fn wibble() {
  wibble()
}


-- app.gleam

import mod.{wibble as wobble}
                      ↑▔▔▔▔▔ 

pub fn main() {
  wobble()
  mod.wibble()
}


----- AFTER RENAME
-- mod.gleam

pub fn wibble() {
  wibble()
}


-- app.gleam

import mod.{wibble as some_function}

pub fn main() {
  some_function()
  mod.wibble()
}
